--- a/src/Components/header/herobox/Herobox.css
+++ b/src/Components/header/herobox/Herobox.css
@@ -1,12 +1,14 @@
 .Herobox-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  gap: 40px;
+  justify-self: center;
+  padding: 40px;
 }
 .Herobox-container > h1 {
   font-size: 35px;
   text-transform: uppercase;
-  text-align: center;
+  word-spacing: 5px;
+  margin-bottom: 40px;
+}
+.Herobox-container > h2 {
+  word-spacing: 10px;
+  font-size: 30px;
 }
